<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tally</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="radiolend">Lend</string>
    <string name="radioborrow">Borrow</string>
    <string name="Rupees">__Amount_</string>
    <string name="Description">Description</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="EnterDescript">Description</string>
	<string name="ToFrom">To</string>
	<string name="Done">Done</string>
	<string name="Friend">Friend</string>
	<string name="IWillGet">I Will Get</string>
	<string name="Option">Option</string>
	<string name="DeleteAll">Delete All</string>
</resources>