<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioLend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radiolend" />

        <RadioButton
            android:id="@+id/radioBorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioborrow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rupees"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnterAmount"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnterDescript" >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	
        <Button
            android:id="@+id/Option"
            android:layout_weight=".35"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option" />
        
        <TextView
            android:id="@+id/tvToFrom"
            android:layout_weight=".3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ToFrom"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/Done"
            android:layout_weight=".35"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Done" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:id="@+id/friendScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c0c0c0" >

        <LinearLayout
            android:id="@+id/LinearLayoutFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</LinearLayout>